[package]
name = "http-timings"
version = "0.2.0"
edition = "2021"
description = "A simple library to measure the key HTTP timings from the development tools"
license-file = "LICENSE"
repository = "https://github.com/downwatch/http-timings"
readme = "README.md"
keywords = ["ttfb", "http", "timings", "web", "performance"]
categories = ["development-tools", "web-programming"]
documentation = "https://docs.rs/http-timings"
authors = [
    "Fabio Almeida <fabio@down.watch>"
]

[dependencies]
url = { version = "2.5" }
openssl = { version = "0.10" }
brotli = { version = "7.0" }
flate2 = { version = "1.0" }
thiserror = { version = "2.0" }